--- a/.gitignore
+++ b/.gitignore
@@ -118,7 +118,8 @@ data/
 # other python files
 NC_File_reader.py
 data_processing.py
-Predicted*.csv
+
+
 # Spyder project settings
 .spyderproject
 .spyproject
@@ -133,6 +134,7 @@ Predicted*.csv
 .mypy_cache/
 .dmypy.json
 dmypy.json
-
+Predicted*.csv
+EarthSunStorm.png
 # Pyre type checker
 .pyre/
